# mcqgen

./: README.md  StreamlitAPP.py  data.txt  pyproject.toml  setup.py  test.py
experiment/: msq.ipynb  srbija.csv
mcqgenerator.egg-info/: PKG-INFO  SOURCES.txt
src/mcqgenerator/: MCQGenerator.py  utils.py
src/msqgenerator/: logger.py
